--- a/2rules.html
+++ b/2rules.html
@@ -43,7 +43,7 @@
 </div>
 <!--更新雲端内的章程文件即可-->
 		  <iframe src="https://drive.google.com/file/d/1SKXqJ33lapOYLgPb8aYCv2jwn8scNETJ/preview;embedded=true#toolbar=0" frameborder="0" width="100%" height="600px"></iframe>
-<!--新係學會若有新的檔案共用資料夾（不能是公共硬碟），則必須要“公開檢視”-->
+<!--新係學會若有新的檔案共用資料夾（不能是公共硬碟），必須要“公開檢視”-->
 <!--複製網址時，留意網址最後有沒有/preview;embedded=true,沒有的話要補上-->
 <!--#toolbar=0是防止下載的代碼-->
 </div>
