--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style="height:100% ; width:100% ; top:0 ; bottom:0 ; left:0 ; right:0;">    
 <head>
 <!--網站名字--><title>彰師美術系員手冊</title>
-<!--網站圖標，新圖片是相同名字和格式即可直接更新檔案--><link rel="icon" href="images/icon.png"><!--如果要用jpg記得把檔案名的png換掉-->
+<!--網站小圖標，新圖片是相同名字和格式即可直接更新檔案--><link rel="icon" href="images/icon.png"><!--如果要用jpg記得把檔案名的png換掉-->
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="keywords" content="" />
