--- a/5photo.html
+++ b/5photo.html
@@ -44,7 +44,7 @@
 <div>
 	<!--項目位子開始-->
 	<!--<h3></h3>是字體大小，如果不知道怎麽運作可以不用理-->
-	<!--<a href=" *相冊公開網站* " title=" *鼠標停留顯示的標題* "> *相冊大標題* </a>-->
+	<!--<a href=" *相冊雲端網址* " title=" *鼠標停留顯示的標題* "> *相冊大標題* </a>-->
 	<!--由<h3>開始複製到</h3>再編輯，就不會出錯-->
 		<h3><a href="https://drive.google.com/drive/folders/1BE5mba0MYYjObzxdOkyhltOK74f7LqQs?usp=sharing" title="109學年活動照片雲端鏈接" target="_blank">109學年活動照片雲端鏈接</a>
 		</h3>
