--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 						<!--以下爲行事曆項目，新增請由<li>開始複製到</li>再編輯-->
 		<li class="first">
 					<p class="date">9月<b>23</b></p>
-					<h3><strong>【展覽】</strong> —— 113級新生展《你好嗎，你是哪裡人》</h3>
+			<h3><strong>【展覽】</strong> —— 113級新生展《你好嗎，你是哪裡人》</h3> <!--<strong></strong>是字形粗體化-->
 					<p>展期：9/23 - 9/30</p>
-			</li>		<!--一個行事曆項目結束-->
+			</li>		
+							<!--一個行事曆項目結束-->
 		<li>
 					<p class="date">9月<b>23</b></p>
 					<h3>109-1 期初系員大會</h3>
